# datos-contratos-publicos

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  skills-lock.json
data/: README.md
data/poblacion_ccaa/: poblacion_total.json
data/referencia/: README.md  dim_gobierno_central.csv  dim_partido_ccaa.csv  partidos_ccaa_2012_2026.json
docs/: diccionario-datos.md  metodologia.md
docs/adr/: 0001-stack-y-arquitectura.md
pipeline/: README.md  pyproject.toml
pipeline/contratos_pipeline/: __init__.py  __main__.py  cli.py  config.py  query.py
pipeline/contratos_pipeline/aggregate/: __init__.py  marts.py  politica.py
pipeline/contratos_pipeline/ingest/: __init__.py  atom_parser.py  runner.py  xml_utils.py
pipeline/contratos_pipeline/mappings/: contratos_menores.yaml
pipeline/tests/: conftest.py  test_atom_parser.py
pipeline/tests/fixtures/: sample_contratos_menores.atom
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  Investigar.tsx  SpainMap.tsx  Tooltip.tsx  vite-env.d.ts
web/src/lib/: db.ts  marts.ts
web/src/styles/: global.css  tokens.css
